--- a/ontology_constructor/ontology_auth/templates/ontology_auth/register.html
+++ b/ontology_constructor/ontology_auth/templates/ontology_auth/register.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'ontology_auth/style_register.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'ontology_auth/favicon.ico' %}" />
     <title>Регистрация</title>
 </head>
@@ -19,21 +21,26 @@
     </div>
     {% endfor %} {% endif %}
 
-    <div class="content-section">
+
+    <div class="auth_wrapper_w  d-flex flex-column align-items-center justify-content-center gap-3">
+        <div class="create_account">
+            Регистрация
+        </div>
         <form method="POST">
             {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Зарегистрируйтесь пожалуйста)</legend>
-                {{ form}}
-            </fieldset>
 
 
+            <div class="a_wrapper">
+                <div class="authh_wrapper d-flex flex-column gap-3">
+                    {{ form.username}} {{ form.email}} {{ form.password1}}
 
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Регистрация</button>
+                    <button class="btn-reg" type="submit">Регистрация</button>
+
+
+                </div>
             </div>
         </form>
-        <div class="border-top pt-3">
+        <div>
             <small class="text-muted">
                 Уже есть аккаунт? <a class="ml-2" href="{% url 'auth'%}">Вход</a>
             </small>
